--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "front-admin",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8090",
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@headlessui/react": "^1.4.1",
@@ -11,7 +12,6 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "craco-alias": "^3.0.1",
-    "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
