--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,18 @@
 version: "3"
 services:
-  front-admin:
+  frontend:
     container_name: front-admin
     build:
       dockerfile: Dockerfile
       context: .
     ports:
-      - "80:80"
-    environment:
-      - TARGET_DOMAIN=http://localhost:8090
+      - "8080:8080"
 #    volumes:
 #      - /node_modules
 #      - ./:/usr/src/app
     stdin_open: true
 
-  core-admin:
+  backend:
     container_name: core-admin
     build:
       dockerfile: ../core/Dockerfile2
