--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3"
 services:
   frontend:
     build:
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
       context: .
     ports:
-      - "8080:3000"
+      - "80:80"
 #    volumes:
 #      - /usr/src/app/node_modules
 #      - ./:/usr/src/app
