--- a/.travis.yml
+++ b/.travis.yml
@@ -24,15 +24,16 @@ after_success:
 #  - docker push smileajw1004/docker-backend
 #  - docker push smileajw1004/docker-nginx
 #
-deploy:
-  provider: elasticbeanstalk
-  region: "ap-northeast-2"
-  app: "front-admin"
-  env: "Frontadmin-env"
-  bucket_name: elasticbeanstalk-ap-northeast-2-049963603103
-  bucket_path: "front-admin"
-  on:
-    branch: master
 
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_ACCESS_KEY
+#deploy:
+#  provider: elasticbeanstalk
+#  region: "ap-northeast-2"
+#  app: "front-admin"
+#  env: "Frontadmin-env"
+#  bucket_name: elasticbeanstalk-ap-northeast-2-049963603103
+#  bucket_path: "front-admin"
+#  on:
+#    branch: master
+#
+#  access_key_id: $AWS_ACCESS_KEY
+#  secret_access_key: $AWS_SECRET_ACCESS_KEY
