--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         # ECR리포지토리 이름
         ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
         IMAGE_TAG: ${{ github.sha }}
-      run: |
+      run:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
