--- a/.github/workflows/ecr-ecs-deploy.yml
+++ b/.github/workflows/ecr-ecs-deploy.yml
@@ -42,23 +42,23 @@ jobs:
         # Pushing image to ECR
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-  deploy:
-    needs: build
-    name: Deploy
-    runs-on:
-      - self-hosted
-      - label-development
-    steps:
-      - name: Login to ghcr
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: hj719310!
-        - name: Docker run
-          run: |
-            docker ps -q --filter "name=$ECR_REGISTRY/$ECR_REPOSITORY" | grep -q . && docker stop $ECR_REGISTRY/$ECR_REPOSITORY && docker rm -fv $ECR_REGISTRY/$ECR_REPOSITORY
-            docker run -d -p 8080:8080 --name cicd --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
+#  deploy:
+#    needs: build
+#    name: Deploy
+#    runs-on:
+#      - self-hosted
+#      - label-development
+#    steps:
+#      - name: Login to ghcr
+#        uses: docker/login-action@v1
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GIT_ACS_TOKEN }}
+#        - name: Docker run
+#          run: |
+#            docker ps -q --filter "name=$ECR_REGISTRY/$ECR_REPOSITORY" | grep -q . && docker stop $ECR_REGISTRY/$ECR_REPOSITORY && docker rm -fv $ECR_REGISTRY/$ECR_REPOSITORY
+#            docker run -d -p 8080:8080 --name cicd --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
 
 #    - name: Fill in the new image ID in the Amazon ECS task definition
 #      id: task-def
