--- a/.github/workflows/docker-github-package-ec2-deploy.yml
+++ b/.github/workflows/docker-github-package-ec2-deploy.yml
@@ -62,8 +62,7 @@ jobs:
           password: ${{ secrets.GIT_ACS_TOKEN }}
       - name: Docker run
         run: |
-          docker stop `docker ps --filter "name=inpix-admin-fo" -q`
-          docker rm -f inpix-admin-fo
+          docker ps -q --filter "name=inpix-admin-fo" | grep -q . && docker stop inpix-admin-fo && docker rm -fv inpix-admin-fo
           docker run -d -p 80:80 --name inpix-admin-fo --restart always ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
           sleep 5
           docker image prune -a -f
