--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "autoprefixer": "^9.8.6",
     "parcel-bundler": "^1.12.5",
     "postcss": "^7.0.36",
+    "prettier": "2.4.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
   }
 }
